Fix product description style.
Now the description of a product in its details page does not go out of the screen and the white space is preserved.

--- a/MHAuthorWebsite/MHAuthorWebsite.Web/wwwroot/css/product-details.css
+++ b/MHAuthorWebsite/MHAuthorWebsite.Web/wwwroot/css/product-details.css
@@ -21,6 +21,11 @@
   color: var(--color-error);
 }
 
+.details-info {
+  white-space-collapse: preserve;
+  line-break: anywhere;
+}
+
 .details-info,
 .additional-info {
   align-items: center;
